--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -367,20 +367,14 @@
 
     .about__card {
       position: absolute;
+      left: 50%;
+      top: 50%;
       width: 100%;
       height: 100%;
       border-radius: 10px;
       overflow: hidden;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
-      animation: cardSwap 6s infinite;
-    }
-
-    .about__card:nth-child(2) {
-      animation-delay: 2s;
-    }
-
-    .about__card:nth-child(3) {
-      animation-delay: 4s;
+      will-change: transform;
     }
 
     img {
