--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -367,15 +367,15 @@
 
     .about__card {
       position: absolute;
-      left: 50%;
-      top: 50%;
+      inset: 0;
       width: 100%;
       height: 100%;
       border-radius: 14px;
       overflow: hidden;
       box-shadow: 0 16px 40px rgba(0, 0, 0, 0.45);
       will-change: transform;
-      transform: translate(-50%, -50%);
+      transform-origin: center center;
+      backface-visibility: hidden;
       transition: transform 650ms cubic-bezier(0.22, 1, 0.36, 1), opacity 650ms cubic-bezier(0.22, 1, 0.36, 1);
     }
 
