Added a view counter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,6 +84,11 @@
       </div>
     </div>
 
+    <div class="site-view-counter" id="siteViewCounter" aria-live="polite" title="Site view counter">
+      <span class="site-view-counter__label">Views</span>
+      <span class="site-view-counter__value" id="siteViewCounterValue">--</span>
+    </div>
+
     <div class="target-cursor" aria-hidden="true">
       <div class="target-cursor__dot"></div>
       <div class="target-cursor__corner corner-tl"></div>
